Fix too much space at top of page with header disabled

--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ main {
 	top: 48px;
 	width: 100%;
 }
+main.no-header {
+	top: 0px;
+}
 footer {
 	margin-top: 32px;
 	border-top: 1px #ccc solid;
